# cis-course

./: .gitignore  README.md  cis_task4.html  cis_task4.ipynb  main.py  pyproject.toml
src/cis_course/: utils.py
tests/: test_image_extract.py
tests/data/: task7_noise_ea.img
